# avr

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: bme280.rs  i2c.rs  lcd1602.rs  main.rs  serial.rs
