[package]
name = "avr"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "1.0"
avr-device = { version = "0.5.4", features = ["rt"] }
itertools = { version = "0.12.1", default-features = false }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
branch = "main"
features = ["attiny85"]

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
